--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -39,7 +39,7 @@ semestrální projekt \\
 
 
 \section{Úvod}
-Člověk už od pradávna vzhlížel ke hvězdám a~vesmírným tělesům ve snaze je zdokumentovat, zaznamenat jejich pohyb či zajistit si jejich příznivé naklonění. V~posledních letech se však lidstvu díky technologickému pokroku podařilo udělat obrovský skok vpřed v~pozorování a~dokumentování naší galaxie a~vesmíru kolem nás. Díky rozmachu vesmírných programů se podařilo umístit přímo do kosmu speciální dužice a~teleskopy díky nimž jsme opět o~krok blíž k poznání tajů vesmíru. V~tomto semestrálním projektu se zabýváme historií, vlastnostmi a~popisem optických soustav dvou vesmírných teleskopů. Prvním teleskopem je Hubbleův teleskop, který je na oběžné dráze v~provozu již 25 let a~pomohl nám objasnit a~objevit mnoho záhad vesmíru. Druhým popsaným teleskopem je teleskop Jamese Webba, který ještě ve vesmíru není, avšak již existuje jeho model ve skutečné velikosti. Konstrukce finálního teleskopu je již v~plném proudu, aby mohl v~roce 2018 započít svoji misi. 
+Člověk už od pradávna vzhlížel ke hvězdám a~vesmírným tělesům ve snaze je zdokumentovat, zaznamenat jejich pohyb či zajistit si jejich příznivé naklonění. V~posledních letech se však lidstvu díky technologickému pokroku podařilo udělat obrovský skok vpřed v~pozorování a~dokumentování naší galaxie a~vesmíru kolem nás. Díky rozmachu vesmírných programů se podařilo umístit přímo do kosmu speciální družice a~teleskopy díky nimž jsme opět o~krok blíž k poznání tajů vesmíru. V~tomto semestrálním projektu se zabýváme historií, vlastnostmi a~popisem optických soustav dvou vesmírných teleskopů. Prvním teleskopem je Hubbleův teleskop, který je na oběžné dráze v~provozu již 25 let a~pomohl nám objasnit a~objevit mnoho záhad vesmíru. Druhým popsaným teleskopem je teleskop Jamese Webba, který ještě ve vesmíru není, avšak již existuje jeho model ve skutečné velikosti. Konstrukce finálního teleskopu je již v~plném proudu, aby mohl v~roce 2018 započít svoji misi. 
 
 \section{Hubbleův vesmírný teleskop}
 Hubbleův vesmírný teleskop (známý také pod svou zkratkou HST, či pouze jako Hubble) je teleskop, který byl vypuštěn na oběžnou dráhu v roce 1990 \cite{nasaHubbleChronology}. Od té doby byly k teleskopu vyslány čtyři servisní mise \cite{hubbleSiteServicingMissions}, které postupně prodlužovaly jeho životnost až do původně očekávaného ukončení činnosti v roce 2015, NASA nyní ovšem tvrdí, že HST by mohl vydržet v provozu do roku 2018 \cite{hubbleUntil2018}, tedy do vypuštění vesmírného teleskopu Jamese Webba.
@@ -52,10 +52,10 @@ Návrh na konstrukci vesmírného teleskopu vznesl poprvé v roce 1946 ve svém 
 
 V roce 1971 utvořila NASA, v reakci na článek profesora Spitzera,  Large Space Telescope Science Steering Group, jejímž cílem bylo studium proveditelnosti vesmírného teleskopu o průměru tři metry. K tomuto projektu byla později v roce 1975 přizvána i European Space Agency. Průměr teleskopu byl zároveň zmenšen na 2,4 metry. 
 
-V roce 1977 byl dokončen původní návrh teleskopu a~NASA přenechála práci na optickém systému společnosti Perkin-Elmer Corporation a~práci na pouzdru společnosti Lockheed Missiles and Space.
+V roce 1977 byl dokončen původní návrh teleskopu a~NASA přenechala práci na optickém systému společnosti Perkin-Elmer Corporation a~práci na pouzdru společnosti Lockheed Missiles and Space.
 
 Práce na optickém systému a pouzdru byly dokončeny v letech 1984 a 1985.
-Teleskop byl 24. dubna roku 1990 vynešen na oběžnou dráhu Země. Nedlouho poté byla objevena chyba hlavního zrcadla teleskopu, která se vyznačuje sférickou aberací, což mělo za následek rozmazané snímky \cite{nasaHubbleChronology}.
+Teleskop byl 24. dubna roku 1990 vynesen na oběžnou dráhu Země. Nedlouho poté byla objevena chyba hlavního zrcadla teleskopu, která se vyznačuje sférickou aberací, což mělo za následek rozmazané snímky \cite{nasaHubbleChronology}.
 
 
 \begin{figure}[h]
@@ -228,7 +228,7 @@ Beryliové patice jsou osazeny do rámu, který je rovněž z berylia. Rám je h
 \end{figure}
 
 \paragraph{Ochranný štít}
-JWST bude vybaven speciálním pětivrstvým slunečním štítem, který bude ochraňovat teleskop před slunečním zářením. Díky tomuto štítu bude možno teleskop ochladit na teplotu okolo 50 Kelvina (přibližně -234 $^\circ$C) díky pasivnímu vyzařování tepla do vesmíru. Strana štítu natočená ke Slunci bude zachycovat tepelné záření. Teplota na této straně štítu by se měla pohybovat okolo 85 $^\circ$C a budou zde umístěny komunikační systémy a solární panely. Štít bude mít ve výsledku velikost přibližně tenisového kurtu.
+JWST bude vybaven speciálním pětivrstvým slunečním štítem, který bude ochraňovat teleskop před slunečním zářením. Díky tomuto štítu bude možno teleskop ochladit na teplotu okolo 50 K (přibližně -234 $^\circ$C) díky pasivnímu vyzařování tepla do vesmíru. Strana štítu natočená ke Slunci bude zachycovat tepelné záření. Teplota na této straně štítu by se měla pohybovat okolo 85 $^\circ$C a budou zde umístěny komunikační systémy a solární panely. Štít bude mít ve výsledku velikost přibližně tenisového kurtu.
 
 \paragraph{Optická soustava a pozorovací technika}
 JWST využívá k pozorování tří-zrcadlového anastigmatu - dalekohledu postaveného se třemi zakřivenými zrcadly, které umožní minimalizovat tři hlavní aberace\footnote{odchylky}: sférickou, komu\footnote{projevuje se "kometovým ocasem" u pozorovaných objektů} a astigmatismus\footnote{zaostření pozorovaného objektu}. Tohoto se používá především k tomu, aby bylo možné pozorovat objekty v mnohem větším zorném úhlu, než by umožňovaly teleskopy se dvěma či jednou zakřivenou plochou \cite{wikipediaAnastigmat}.
@@ -247,7 +247,7 @@ Paprsky z primárního zrcadla jsou směřovány do sekundárního, které je um
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=8cm]{webbPaprsky2.eps}
-\caption{Ukázka přepokládaného umístění teleskopu ve vesmíru a způsob přijímání infračerveného záření, které je naznačeno červenými paprsky}
+\caption{Ukázka předpokládaného umístění teleskopu ve vesmíru a způsob přijímání infračerveného záření, které je naznačeno červenými paprsky}
 \label{paprskyWebb2}
 \end{center}
 \end{figure}
@@ -256,7 +256,7 @@ Takto přijaté paprsky jsou následně zpracovávány několika přístroji, kt
 
 Near InfraRed Camera (NIRCam) - kamera vybavená přístrojem, který umožní odstínit světlo hvězdy a studovat tak její okolí (například planety). Zaměří se na studium starých hvězd ve vzdálených galaxiích i ledová tělesa daleko za dráhou Neptunu.
 
-Near InfraRed Spectrograph (NIRSpec) - sektrograf určený pro studium složení, teploty a hmotnosti vzdálených nebeských objektů.
+Near InfraRed Spectrograph (NIRSpec) - spektrograf určený pro studium složení, teploty a hmotnosti vzdálených nebeských objektů.
 
 Mid-InfraRed Instrument (MIRI) - kamera a spektrograf v jednom. Zaměří se na studium nejstarších galaxií a hvězd stejně jako slabých komet.
 
@@ -277,7 +277,7 @@ Po vypuštění JWST budeme muset na první snímky nějakou dobu počkat. Nejpr
 Pro připojení jednotlivých zrcadel k hlavní nosné konstrukci teleskopu jsou použity pružné tvarovky – Flextures. Fungují jako pružiny. Flextures dovolují rozpínání a smršťování celé soustavy zrcadel, ke kterému dochází změnami teplot  už v rámci předletových kontrol zde na Zemi. Cílem je otestovat tvarovou stabilitu JWST před jeho velkým ochlazením, ke kterému dojde ve vesmíru a kde provozní teplota bude okolo 50 K (-223 $^\circ$C) \cite{osel}.
 
 \subsubsection{Umístění teleskopu}
-Narozdíl od svého předchůdce (Hubbleův teleskop) se JWST nebude pohybovat na nízké oběžné dráze, ale bude umístěn v Lagrangeově bodě L2 soustavy Země - Slunce, tedy asi 1,5 mil. km od Země, na opačné straně než Slunce. Teleskop bude obíhat po eliptické dráze s poloměrem přibližně 800 000 km v okolí bodu L2. Tuto dráhu by měl být schopen zvládnout za půl roku.
+Na rozdíl od svého předchůdce (Hubbleův teleskop) se JWST nebude pohybovat na nízké oběžné dráze, ale bude umístěn v Lagrangeově bodě L2 soustavy Země - Slunce, tedy asi 1,5 mil. km od Země, na opačné straně než Slunce. Teleskop bude obíhat po eliptické dráze s poloměrem přibližně 800 000 km v okolí bodu L2. Tuto dráhu by měl být schopen zvládnout za půl roku.
 
 Lagrangeův bod je v nebeské mechanice takový bod v soustavě dvou těles \begin{math}m_1\end{math} a \begin{math}m_2\end{math} rotujících kolem společného těžiště, v němž se vyrovnávají gravitační a odstředivé síly soustavy tak, že malé těleso umístěné do tohoto bodu nemění vůči soustavě svou polohu. Všechny Lagrangeovy body se nachází v rovině rotace těchto těles a je jich celkem pět. Označují se L1 až L5. Vlastnosti Lagrangeových bodů popsal v roce 1772 francouzský matematik a fyzik Joseph Louis Lagrange \cite{lagrange}.
 \begin{figure}[h]
@@ -291,7 +291,7 @@ Servisní lety současnými běžnými pilotovanými prostředky k tomuto telesk
 
 Od roku 2005 byl velký model JWST byl postupně představen na několika místech na světě. V USA byl vystaven v Seattlu ve státě Washington, v Colorado Springs ve státě Colorado, v Greenbeltu ve státě Maryland, v Rochesteru a na Manhattanu ve státě New York a v Orlandu na Floridě. Dále byl představen v Paříži, Dublinu, Montrealu, Hatfieldu a Mnichově. Model byl vybudován hlavním partnerem tohoto projektu, firmou North Grumman Aerospace Systems.
 
-V roce 2007 byl model teleskopu v životní velikosti vystaven ve Washingtonu D.C., aby si díky němu lidé lépe představili rozměry a komplexitu satelitu. Tento model byl z důvodl působení gravitace a počasí vyroben z hliníku a oceli. Model má rozměry 24x12x12 metrů a je těžký 5.5 tuny \cite{wikipediaWebbEn}.
+V roce 2007 byl model teleskopu v životní velikosti vystaven ve Washingtonu D.C., aby si díky němu lidé lépe představili rozměry a komplexitu satelitu. Tento model byl z důvodu působení gravitace a počasí vyroben z hliníku a oceli. Model má rozměry 24x12x12 metrů a je těžký 5.5 tuny \cite{wikipediaWebbEn}.
 
 \begin{figure}[h]
 \begin{center}
