Uprava zobrazeni poslednich obrazku

--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -299,7 +299,7 @@ V roce 2007 byl model teleskopu v životní velikosti vystaven ve Washingtonu D.
 \caption{Vystavený model JWST}
 \end{center}
 \end{figure}
-
+\newpage
 \section{Srovnání Hubbleova teleskopu s Teleskopem Jamese Webba}
 Velmi krátce zde na názorných obrázcích představíme rozdíly mezi Hubbleovým teleskopem a Teleskopem Jamese Webba.
 
