Webb v jave + uprava dokumentace

--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -190,7 +190,7 @@ Dále inicioval vznik intenzivního vesmírného programu, díky němuž během 
 \\
 
 \subsection{Poslání a popis teleskopu}
-Hlavní mise, kterou by měl JWST po svém vypuštění plnit, se skládá ze čtyř částí.  První částí je hledání světla z prvních hvězd a galaxií, které byly ve vesmíru formovány po Velkém třesku. Druhou částí mise je studování formování a vývoje galaxií. Třetí částí je pochopení formování hvězd a planetárních systémů a poslední částí je studování planetárních systémů a počátku života. \cite{wikipediaWebbEn}. V následujících podkapitolách si představíme, z čeho se JWST skládá, jak je ovládán a kde by se měl po vypuštění pohybovat.
+Hlavní mise, kterou by měl JWST po svém vypuštění plnit, se skládá ze čtyř částí.  První částí je hledání světla z prvních hvězd a galaxií, které byly ve vesmíru formovány po Velkém třesku. Druhou částí mise je studování formování a vývoje galaxií. Třetí částí je pochopení formování hvězd a planetárních systémů a poslední částí je studování planetárních systémů a jejich počátků. \cite{wikipediaWebbEn}. V následujících podkapitolách si představíme, z čeho se JWST skládá, jak je ovládán a kde by se měl po vypuštění pohybovat.
 
 \subsubsection{Zrcadla a optický systém}
 Teleskop se skládá z velkého primárního a malého sekundárního a terciálního zrcadla, tepelného štítu a věde\-ckých přístrojů, které jsou popsány níže. Jak již bylo napsáno, JWST bude pracovat v infračerveném spektru, což mu umožní proniknout vesmírným prachem a sledovat velmi vzdálené objekty s nízkou povrchovou teplotou.
