Oprava překlepu, doplnění webba v prezentaci

--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -174,7 +174,7 @@ Aby do snímacích zařízení nevstupovalo nežádoucí záření, tak je objek
 Druhým teleskopem, který v~tomto projektu představíme, je vesmírný teleskop Jamese Webba. Vesmírný teleskop Jamese Webba (anglicky James Webb Space Telescope, dále v textu jen JWST) je plánovaná vesmírná observatoř, která by měla být vypuštěna v~říjnu 2018. JWST by měl nahradit dosluhující Hubbleův teleskop. V jednotlivých podkapitolách budeme postupně rozebírat jeho zvláštnosti a~parametry. V první řadě se ale zaměříme na jeho historii a~pojmenování.
 
 \subsection{Představení teleskopu} 
-JWST je plánovaná velká vesmírná observatoř optimalizovaná pro příjem infračerveného vlnového záření (0.6 a6 28 $\mu m$), pomocí kterého budou doplněny a~prohloubeny objevy, které byly uskutečněny Hubbleovým teleskopem.
+JWST je plánovaná velká vesmírná observatoř optimalizovaná pro příjem infračerveného vlnového záření (0.6 až 28 $\mu m$), pomocí kterého budou doplněny a~prohloubeny objevy, které byly uskutečněny Hubbleovým teleskopem.
 Díky této vlnové délce bude JWST schopen pozorovat formování prvních galaxií při utváření vesmíru a dále bude schopen pozorovat formování galaxií, které jsou ukryté za mračny vesmírného prachu. Hmotnost JWST by měla být 6.5 tuny. Životnost teleskopu je odhadována na 10 let.
 
 Původní název JSWT byl Vesmírný teleskop nové generace (anglicky Next Generation Space Telescope, zkráceně NGST). Přívlastek "nové generace" získal proto, že JWST bude stavět a pokračovat ve vědním průzku\-mu, který započal Hubbleův vesmírný teleskop. Objevy, které byly učiněny Hubbleovým teleskopem, ale i ostatními teleskopy, zapříčinily revoluci v astronomii a vyvstaly nové otázky, na jejichž zodpovězení bylo zapotřebí nových, odlišných a výkonnějších teleskopů. 
